--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     
-    
+    <h1>Hello world</h1>
     <script src="assets/scripts/bootstrap.bundle.min.js"></script>
     <script src="assets/scripts/main.js"></script>
   </body>
