Добавил первые общие правила css

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CoffeMeet</title>
-    <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/styles/main.css">
-  </head>
-  <body>
-    
-    <h1>Hello world</h1>
-    <script src="assets/scripts/bootstrap.bundle.min.js"></script>
-    <script src="assets/scripts/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>CoffeMeet :: Homepage</title>
+  <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/styles/main.css">
+</head>
+
+<body>
+
+  <div class="wrapper">
+    <header class="header">
+      HEADER
+    </header>
+    <main class="main">
+      MAIN
+    </main>
+    <footer class="footer">
+      FOOTER
+    </footer>
+  </div>
+
+  <script src="assets/scripts/bootstrap.bundle.min.js"></script>
+  <script src="assets/scripts/main.js"></script>
+</body>
+
 </html>
