Сверстал header-top

--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 
   <div class="wrapper">
     <header class="header">
-      HEADER
+      
+      <div class="container">
+        <div class="header-top d-flex justify-content-between">
+            <ul class="languages list-inline mb-0">
+              <li class="list-inline-item"><a href="#">RU</a></li>
+              <li class="list-inline-item"><a href="#" class="active">EN</a></li>
+            </ul>
+            <a class="header-phone" href="tel:+371000000">+371000000</a>
+        </div>
+      </div>
+
     </header>
     <main class="main">
       MAIN
