--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
   <div class="wrapper">
+
     <header class="header">
       
       <div class="container">
@@ -24,13 +25,50 @@
         </div>
       </div>
 
+      <nav class="navbar navbar-expand-lg " data-bs-theme="dark">
+        <div class="container">
+          <a class="navbar-brand" href="#">
+            <img src="assets/images/Logo.png" alt="logo">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="offcanvas offcanvas-start " tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Menu</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Reservation</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          
+        </div>
+      </nav>
+
     </header>
+
     <main class="main">
       MAIN
     </main>
+
     <footer class="footer">
       FOOTER
     </footer>
+
   </div>
 
   <script src="assets/scripts/bootstrap.bundle.min.js"></script>
