Сверстал nav-bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>CoffeMeet :: Homepage</title>
   <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/icons/style.css">
   <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 
@@ -35,11 +36,11 @@
           </button>
           <div class="offcanvas offcanvas-start " tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
-              <ul class="navbar-nav justify-content-start flex-grow-1 pe-3">
+              <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
@@ -55,6 +56,12 @@
               </ul>
             </div>
           </div>
+
+          <ul class="list-inline mb-0 header-icons">
+            <li class="list-inline-item"><a href="#"><span class="icon-user"></span></a></li>
+            <li class="list-inline-item"><a href="#"><span class="icon-favorite"></span></span></a></li>
+            <li class="list-inline-item"><a href="#"><span class="icon-cart"><span></span></span></a></li>
+          </ul>
           
         </div>
       </nav>
