--- a/index.html
+++ b/index.html
@@ -108,7 +108,18 @@
     <!-- ./Header -->
 
     <main class="main">
-      MAIN
+      
+      <section class="hero-section" style="background: url(assets/images/hero_img.jpg) center no-repeat; background-size: cover;">
+        <div class="container">
+          <div class="hero-section-content col-6">
+            <h1>Roasted coffee best choice</h1>
+            <p>The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
+            <a href="#" class="btn btn-warning me-3">Buy now</a>
+            <a href="#" class="btn btn-outline-secondary">read more</a>
+          </div>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer">
