Добавил адаптив для hero

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       
       <section class="hero-section" style="background: url(assets/images/hero_img.jpg) center no-repeat; background-size: cover;">
         <div class="container">
-          <div class="hero-section-content col-6">
+          <div class="hero-section-content col-lg-6 col-md-8">
             <h1>Roasted coffee best choice</h1>
             <p>The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
             <a href="#" class="btn btn-warning me-3">Buy now</a>
