Сверстал секцию баннер

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
     <main class="main">
       
+      <!-- hero-section -->
       <section class="hero-section" style="background: url(assets/images/hero_img.jpg) center no-repeat; background-size: cover;">
         <div class="container">
           <div class="hero-section-content col-lg-6 col-md-8">
@@ -116,6 +117,22 @@
             <p>The coffee is brewed by first roasting the green coffee beans over hot coals in a brazier. given an opportunity to sample.</p>
             <a href="#" class="btn btn-warning me-3">Buy now</a>
             <a href="#" class="btn btn-outline-secondary">read more</a>
+          </div>
+        </div>
+      </section>
+      <!-- ./hero-section -->
+
+      <!-- banner-section -->
+      <section class="banner-section">
+        <div class="container">
+          <div class="banner-section-inner d-lg-flex ">
+            <div class="banner-section-img col-lg-6">
+              <img src="assets/images/banner.jpg" alt="banner">
+            </div>
+            <div class="banner-section-content col-lg-6">
+              <h3>Roasted Coffee</h3>
+              <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. </p>
+            </div>
           </div>
         </div>
       </section>
