Полностью сверстал миникорзину

--- a/index.html
+++ b/index.html
@@ -135,9 +135,16 @@
 
           <hr>
 
-          <div class="minicart-total-price">
+          <div class="minicart-total-price d-flex justify-content-between align-items-center">
             <h5>Total price: $178.99</h5>
-            <button class="btn btn-outline-secondary">Update cart</button>
+            <button class="btn btn-outline-secondary text-capitalize">Update cart</button>
+          </div>
+
+          <hr>
+          
+          <div class="minicart-btn">
+            <a href="#" class="btn btn-outline-secondary">Cart</a>
+            <a href="#" class="btn btn-warning">Checkout</a>
           </div>
 
         </div>
