Создал product.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </header>
     <!-- ./Header -->
 
-    <main class="main">
+    <main class="main home-page">
       
       <!-- hero-section -->
       <section class="hero-section" style="background: url(assets/images/hero_img.jpg) center no-repeat; background-size: cover;">
