--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="assets/styles/bootstrap.min.css">
   <link rel="stylesheet" href="assets/icons/style.css">
   <link rel="stylesheet" href="assets/styles/main.css">
+  <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
