--- a/cart.html
+++ b/cart.html
@@ -211,25 +211,26 @@
           <div class="col-md-4">
             <div class="cart-summary">
               <h5>Cart summary</h5>
-              <div>
+              <div class="d-flex justify-content-between my-2">
                 <h6>Subtotal</h6>
                 <h6>$99.99</h6>
               </div>
-              <div>
+              <div class="d-flex justify-content-between my-2">
                 <h6>Coupon</h6>
                 <h6>-$5</h6>
               </div>
-              <div>
+              <div class="d-flex justify-content-between my-2">
                 <h6>Shipping</h6>
                 <h6>$2</h6>
               </div>
-              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCoupon" aria-expanded="false" aria-controls="collapseCoupon">
+              <button class="btn btn-warning btn-summary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCoupon" aria-expanded="false" aria-controls="collapseCoupon">
                 Have coupon?
               </button>
               <div class="input-group collapse mb-3" id="collapseCoupon">
                 <input type="text" class="form-control" placeholder="Coupon code"  aria-describedby="basic-addon1">
+                <button type="button" class="btn btn-warning">✓</button>
               </div>
-              <div>
+              <div class="d-flex justify-content-between my-2">
                 <h3>Total</h3>
                 <h3>$96.99</h3>
               </div>
